# plataforma-proyectos-ia

./: .editorconfig  .env.example  .gitignore  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  lambda_handler.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-frontend.yml  deploy-lambda.yml
database/mysql/: 001_init_plataformaIa.sql  002_agent_runs_provider_model.sql  003_ia_generator_iterations.sql
docs/00_intake/: AC.md  NFR.md  PRD.md  module-map.md  out-of-scope.md  project-brief.md  risk-register.md
docs/adr/: ADR-template.md  README.md
docs/architecture/: api-standards.md  backend-blueprint.md  data-model.md  integration-map.md
docs/data/: data-quality-rules.md  mysql-ddl-runbook.md  seed-strategy.md
docs/design/: design-system.md  tokens.json
docs/engineering/: standards.md
docs/frontend/: integration-map.md
docs/operations/: aws-custom-domains.md  capacity-plan.md  cicd.md  cost-baseline.md  current-status.md  environments.md  frontend-s3.md  lambda-deploy.md  observability-plan.md  project-bootstrap-template.md  release-playbook.md  (+3 more)
frontend/: index.html  package-lock.json  package.json
scripts/: deploy_backend_full.ps1  deploy_frontend_git.ps1  deploy_frontend_s3.ps1  deploy_lambda.ps1  load_project_env.ps1  package_lambda.ps1  package_lambda_layer.ps1  preflight_check.py  release_full.ps1  scaffold_from_spec.py
specs/: project.spec.yml
src/: main.py
tests/: test_config_security.py  test_health.py
(+72 files in other folders)
